[package]
name = "bin"
version = "0.1.0"
authors = ["Gunwant Jain <mail@wantguns.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.0"
rocket = "0.4.6"
rocket_contrib = { version = "0.4.6", features = ["tera_templates"] }
tree_magic = "0.2.3"

# [dependencies.rocket_contrib]
# version = "0.4.6"
# default-features = false
# features = ["tera_templates"]

